log

Wed 13 Mar 2024 08:44:18 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
15c6352
Wed 13 Mar 2024 08:53:07 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|7
total_score: 0/70
faa93be
Wed 13 Mar 2024 08:58:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
293d260
Wed 13 Mar 2024 09:01:24 PM UTC: 
 exercises.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  0|6
total_score: 10/70
9a6c1ba
Wed 13 Mar 2024 09:08:52 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   30 |   int aux[size];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
8596f58
Wed 13 Mar 2024 09:15:15 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 20/70
5dfcd77
Fri 15 Mar 2024 09:46:53 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
3321b19
